# deadmannotifier

./: .gitignore  AGENTS.md  CONFIG_WATCH_DEMO.md  Cargo.toml  Dockerfile  Dockerfile.runtime  Makefile  PROGRESS.md  README.md  config.yaml  deadman.db  docker-compose.yml  package-lock.json  package.json  run.sh  test-config-getServiceById-1.yaml  test-config-getServiceById-2.yaml
.github/workflows/: docker.yml  test.yml
assets/: schema.sql
docs/: CONFIG.md  DATABASE.md
src/: config.rs  cron_logic.rs  cron_runner.rs  db.rs  domain.rs  email.rs  embedded_cron.rs  error.rs  index.js  lib.rs  main.rs  server.js  watcher.rs
src/cli/: cron.js  list.js  logs.js  serve.js
src/commands/: cron.rs  list.rs  logs.rs  serve.rs
src/db/: database.js  schema.sql
src/http/: dashboard.rs  heatmap.rs  mod.rs  ping.rs
src/routes/: ping.js
src/services/: config.js  cron.js  email.js
src/templates/: email.hbs
templates/: dashboard.html  dashboard_day.html  dashboard_service.html  email.html
tests/: http_integration.rs
tests/integration/: server.test.js
tests/unit/: config.test.js  cron-refactored.test.js  cron.test.js  database.test.js  email.test.js  logs-display.test.js
